// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorProfile test on web does not re-render the author head if the name changes 1`] = `
<responsive-styles__component
  accessibilityLabel="author-name"
  accessibilityRole="heading"
  aria-level="1"
  testID="author-name"
>
  Deborah Haynes
</responsive-styles__component>
`;

exports[`AuthorProfile test on web does not render good quality images if the item is quickly scrolled passed 1`] = `
Array [
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=100"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F459f7782-c950-11e7-9ee9-e45ae7e1cdd4.jpg?crop=5448%2C3632%2C0%2C0&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F06c0e50a-c667-11e7-9914-a38dcc178fcd.jpg?crop=3600%2C2400%2C0%2C0&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
  <img
    alt=""
    src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1d663086-c625-11e7-9914-a38dcc178fcd.jpg?crop=907%2C605%2C87%2C93&resize=660"
    style="display: block; width: 100%; z-index: 1; position: absolute;"
  />,
]
`;

exports[`AuthorProfile test on web does re-render the author head if the loading state changes 1`] = `
<responsive-styles__component
  accessibilityLabel="author-name"
  accessibilityRole="heading"
  aria-level="1"
  testID="author-name"
>
  second name
</responsive-styles__component>
`;

exports[`AuthorProfile test on web renders a good quality image if it is visible 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
>
  <div
    style="height: 0px; overflow: hidden; padding-bottom: 66.66666666666667%; display: table;"
  >
    <img
      alt=""
      src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=660"
      style="display: block; width: 100%; z-index: 1; position: absolute;"
    />
    <div
      class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-bottom-1p0dtai rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-left-1d2f490 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-u8s1d rn-right-zchlnj rn-top-ipm5af rn-zIndex-1lgpqti"
    >
      <div
        class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
      />
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders a poor quality image if it is not visible 1`] = `
<div
  class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flexShrink-1pxmb3b rn-flexBasis-7vfszb rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
>
  <div
    style="height: 0px; overflow: hidden; padding-bottom: 66.66666666666667%; display: table;"
  >
    <img
      alt=""
      src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=100"
      style="display: block; width: 100%; z-index: 1; position: absolute;"
    />
    <div
      class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-bottom-1p0dtai rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-left-1d2f490 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-u8s1d rn-right-zchlnj rn-top-ipm5af rn-zIndex-1lgpqti"
    >
      <div
        class="rn-alignItems-1oszu61 rn-borderTopStyle-1efd50x rn-borderRightStyle-14skgim rn-borderBottomStyle-rull8r rn-borderLeftStyle-mm0ijv rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-display-6koalj rn-flex-13awgt0 rn-flexGrow-1m1wadx rn-flexShrink-1awmn5t rn-flexDirection-eqz5dr rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-minHeight-ifefl9 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-position-bnwqim rn-zIndex-1lgpqti"
      />
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders good quality images if there is no IntersectionObserver 1`] = `
Array [
  <TimesImage
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=660"
  >
    <View>
      <div>
        <div
          style={
            Object {
              "display": "table",
              "height": 0,
              "overflow": "hidden",
              "paddingBottom": "66.66666666666667%",
            }
          }
        >
          <img
            alt=""
            src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=660"
            style={
              Object {
                "display": "block",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          />
          <Placeholder
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "bottom": 0,
                  "flex": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 0,
                }
              }
            >
              <div>
                <Gradient
                  degrees={264}
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        "flex": 1,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </View>
                </Gradient>
              </div>
            </View>
          </Placeholder>
        </div>
      </div>
    </View>
  </TimesImage>,
  <TimesImage
    aspectRatio={1.5}
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=660"
  >
    <View>
      <div>
        <div
          style={
            Object {
              "display": "table",
              "height": 0,
              "overflow": "hidden",
              "paddingBottom": "66.66666666666667%",
            }
          }
        >
          <img
            alt=""
            src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=660"
            style={
              Object {
                "display": "block",
                "position": "absolute",
                "width": "100%",
                "zIndex": 1,
              }
            }
          />
          <Placeholder
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "bottom": 0,
                  "flex": 1,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "zIndex": 0,
                }
              }
            >
              <div>
                <Gradient
                  degrees={264}
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        "flex": 1,
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                        }
                      }
                    />
                  </View>
                </Gradient>
              </div>
            </View>
          </Placeholder>
        </div>
      </div>
    </View>
  </TimesImage>,
]
`;

exports[`AuthorProfile test on web renders page error 1`] = `
<AuthorProfileListingError
  refetch={[Function]}
>
  <responsive-styles__component>
    <View
      className="responsive-styles__component-fbPFZZ kWpEOX"
    >
      <div
        className="responsive-styles__component-fbPFZZ kWpEOX"
      >
        <responsive-styles__component>
          <Text
            className="responsive-styles__component-fbPFZZ egBQqt"
          >
            <div
              className="responsive-styles__component-fbPFZZ egBQqt"
              dir="auto"
            >
              Something's gone wrong
            </div>
          </Text>
        </responsive-styles__component>
        <responsive-styles__component>
          <Text
            className="responsive-styles__component-fbPFZZ knwxCQ"
          >
            <div
              className="responsive-styles__component-fbPFZZ knwxCQ"
              dir="auto"
            >
              We can't load the page you have requested. Please check your network connection and retry to continue
            </div>
          </Text>
        </responsive-styles__component>
        <responsive-styles__component>
          <View
            className="responsive-styles__component-fbPFZZ kvPcCV"
          >
            <div
              className="responsive-styles__component-fbPFZZ kvPcCV"
            >
              <Button
                accessibilityLabel="Refresh the page"
                color="#006699"
                onPress={[Function]}
                title="Retry"
              >
                <TouchableOpacity
                  accessibilityLabel="Refresh the page"
                  accessibilityRole="button"
                  activeOpacity={0.2}
                  focusedOpacity={0.7}
                  onPress={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#006699",
                      "borderRadius": 2,
                    }
                  }
                >
                  <View
                    accessibilityLabel="Refresh the page"
                    accessibilityRole="button"
                    accessible={true}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#006699",
                        "borderRadius": 2,
                        "cursor": "pointer",
                        "touchAction": "manipulate",
                        "transitionDuration": "0.15s",
                        "transitionProperty": "opacity",
                        "userSelect": "none",
                      }
                    }
                  >
                    <div
                      aria-label="Refresh the page"
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      role="button"
                      style={
                        Object {
                          "backgroundColor": "rgba(0,102,153,1)",
                        }
                      }
                      tabIndex="0"
                    >
                      <Text
                        style={
                          Object {
                            "color": "#fff",
                            "fontWeight": "500",
                            "padding": 8,
                            "textAlign": "center",
                            "textTransform": "uppercase",
                          }
                        }
                      >
                        <div
                          dir="auto"
                        >
                          Retry
                        </div>
                      </Text>
                    </div>
                  </View>
                </TouchableOpacity>
              </Button>
            </div>
          </View>
        </responsive-styles__component>
      </div>
    </View>
  </responsive-styles__component>
</AuthorProfileListingError>
`;

exports[`AuthorProfile test on web renders profile 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ woNlo"
  >
    <div
      data-testid="author-head"
    >
      <header
        className="responsive-styles__component-fbPFZZ eNPgyU"
        role="banner"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        >
          <div
            style={
              Object {
                "borderBottomLeftRadius": "50%",
                "borderBottomRightRadius": "50%",
                "borderTopLeftRadius": "50%",
                "borderTopRightRadius": "50%",
              }
            }
          >
            <div
              style={
                Object {
                  "display": "table",
                  "height": 0,
                  "overflow": "hidden",
                  "paddingBottom": "100%",
                }
              }
            >
              <img
                alt=""
                src="//www.thetimes.co.uk/d/img/profile/deborah-haynes.jpg"
                style={
                  Object {
                    "display": "block",
                    "position": "absolute",
                    "width": "100%",
                    "zIndex": 1,
                  }
                }
              />
              <div>
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ dkRirA"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          Deborah Haynes
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
            }
          }
        >
          defence editor
        </h2>
        <div>
          <svg
            height={15}
            width={15}
          >
            <path
              fill="#006699"
            />
          </svg>
          <a
            dir="auto"
            href="https://twitter.com/jdoe"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
          >
            @
            jdoe
          </a>
        </div>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          >
            Deborah Haynes is the defence editor at 
            <em>
              The Times
            </em>
            , covering the most important defence & security news in the UK and around the world.
          </div>
        </div>
      </header>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ cvTinV"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 1 - 3 of 20 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div>
              <a
                href="?page=2"
                onClick={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
              >
                <div
                  data-testid="pagination-button-next"
                >
                  <div
                    dir="auto"
                  >
                    <span
                      dir="auto"
                    >
                      Next
                      <span
                        className="responsive-styles__component-fbPFZZ hqaoTY"
                        dir="auto"
                      >
                         page
                      </span>
                    </span>
                  </div>
                  <svg
                    height={12}
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path />
                    </g>
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="empty.0"
        data-testid="empty.0"
        id="empty.0"
      >
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.1"
        data-testid="empty.1"
        id="empty.1"
      >
        <div />
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.2"
        data-testid="empty.2"
        id="empty.2"
      >
        <div />
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div>
              <a
                href="?page=2"
                onClick={[Function]}
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
              >
                <div
                  data-testid="pagination-button-next"
                >
                  <div
                    dir="auto"
                  >
                    <span
                      dir="auto"
                    >
                      Next
                      <span
                        className="responsive-styles__component-fbPFZZ hqaoTY"
                        dir="auto"
                      >
                         page
                      </span>
                    </span>
                  </div>
                  <svg
                    height={12}
                    width={7}
                  >
                    <g
                      fill="#006699"
                    >
                      <path />
                    </g>
                  </svg>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders profile content component 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ woNlo"
  >
    <div
      data-testid="author-head"
    >
      <header
        className="responsive-styles__component-fbPFZZ eNPgyU"
        role="banner"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        />
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ dkRirA"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          Deborah Haynes
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
            }
          }
        >
          defence editor
        </h2>
        <div>
          <svg
            height={15}
            width={15}
          >
            <path
              fill="#006699"
            />
          </svg>
          <a
            dir="auto"
            href="https://twitter.com/jdoe"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
          >
            @
            jdoe
          </a>
        </div>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          >
            Deborah Haynes is the defence editor at 
            <em>
              The Times
            </em>
            , covering the most important defence & security news in the UK and around the world.
          </div>
        </div>
      </header>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ cvTinV"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        data-testid="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
        id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      >
        <a
          href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div>
            <div
              className="responsive-styles__component-fbPFZZ yHfos"
            >
              <div
                className="responsive-styles__component-fbPFZZ woNlo"
              >
                <div>
                  <div
                    className="authorProfileImage"
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "display": "table",
                            "height": 0,
                            "overflow": "hidden",
                            "paddingBottom": "66.66666666666667%",
                          }
                        }
                      >
                        <img
                          alt=""
                          src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F1b5afe88-cb0d-11e7-9ee9-e45ae7e1cdd4.jpg?crop=4252%2C2835%2C0%2C0&resize=100"
                          style={
                            Object {
                              "display": "block",
                              "position": "absolute",
                              "width": "100%",
                              "zIndex": 1,
                            }
                          }
                        />
                        <div>
                          <div
                            style={
                              Object {
                                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="authorProfileContent"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Top medal for forces dog who took a bite out of the Taliban
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Friday November 17 2017, 12:01am, The Times
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        data-testid="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
        id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/social-media-must-raise-game-to-beat-terrorists-says-un-chief-s5w8878f0"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div>
            <div
              className="responsive-styles__component-fbPFZZ yHfos"
            >
              <div
                className="responsive-styles__component-fbPFZZ woNlo"
              >
                <div>
                  <div
                    className="authorProfileImage"
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "display": "table",
                            "height": 0,
                            "overflow": "hidden",
                            "paddingBottom": "66.66666666666667%",
                          }
                        }
                      >
                        <img
                          alt=""
                          src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd1fe3000-cb0e-11e7-9ee9-e45ae7e1cdd4.jpg?crop=2887%2C1925%2C562%2C745&resize=100"
                          style={
                            Object {
                              "display": "block",
                              "position": "absolute",
                              "width": "100%",
                              "zIndex": 1,
                            }
                          }
                        />
                        <div>
                          <div
                            style={
                              Object {
                                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="authorProfileContent"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Social media must raise game to beat terrorists, says UN chief
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          The head of the United Nations has added his voice to calls for Facebook, YouTube, Microsoft and Twitter to help to stop the spread of terrorist
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Friday November 17 2017, 12:01am, The Times
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
      <div
        accessibility-label="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        data-testid="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
        id="f79c9d8c-c95c-11e7-b529-95e3fc05f40f.2"
      >
        <div />
        <a
          href="https://www.thetimes.co.uk/article/cuts-have-left-the-army-20-years-out-of-date-says-former-general-sir-richard-barrons-lg9txzbpn"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <div>
            <div
              className="responsive-styles__component-fbPFZZ yHfos"
            >
              <div
                className="responsive-styles__component-fbPFZZ woNlo"
              >
                <div>
                  <div
                    className="authorProfileImage"
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "display": "table",
                            "height": 0,
                            "overflow": "hidden",
                            "paddingBottom": "66.66666666666667%",
                          }
                        }
                      >
                        <img
                          alt=""
                          src="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F459f7782-c950-11e7-9ee9-e45ae7e1cdd4.jpg?crop=5448%2C3632%2C0%2C0&resize=100"
                          style={
                            Object {
                              "display": "block",
                              "position": "absolute",
                              "width": "100%",
                              "zIndex": 1,
                            }
                          }
                        />
                        <div>
                          <div
                            style={
                              Object {
                                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="authorProfileContent"
                  >
                    <div>
                      <h3
                        aria-level="3"
                        dir="auto"
                        role="heading"
                        style={
                          Object {
                            "fontFamily": "TimesModern-Bold",
                            "fontSize": "22px",
                            "fontWeight": "400",
                            "lineHeight": "22px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Cuts have left the army 20 years out of date, says former general
                      </h3>
                      <div
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "20px",
                          }
                        }
                      >
                        <span
                          dir="auto"
                        >
                          
                          Britain’s cash-strapped army is 20 years out of date and would be incapable of surviving Russian artillery and air strikes in a conflict, a
                          ...
                        </span>
                      </div>
                      <div
                        aria-label="datePublication"
                        data-testid="datePublication"
                        dir="auto"
                        style={
                          Object {
                            "lineHeight": "15px",
                            "marginBottom": "5px",
                          }
                        }
                      >
                        Tuesday November 14 2017, 05:00pm, The Times
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders profile content empty 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ woNlo"
  >
    <div
      data-testid="author-head"
    >
      <header
        className="responsive-styles__component-fbPFZZ eNPgyU"
        role="banner"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        />
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ dkRirA"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
            }
          }
        >
          
        </h2>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          />
        </div>
      </header>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ cvTinV"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders profile content item component 1`] = `
<a
  href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div>
    <div
      className="responsive-styles__component-fbPFZZ yHfos"
    >
      <div
        className="responsive-styles__component-fbPFZZ woNlo"
      >
        <div>
          <div
            className="authorProfileContent"
          >
            <div
              className="responsive-styles__component-fbPFZZ dQznFS"
            >
              <div>
                <h3
                  aria-level="3"
                  dir="auto"
                  role="heading"
                  style={
                    Object {
                      "fontFamily": "TimesModern-Bold",
                      "fontSize": "22px",
                      "fontWeight": "400",
                      "lineHeight": "22px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Top medal for forces dog who took a bite out of the Taliban
                </h3>
                <div
                  aria-label="datePublication"
                  data-testid="datePublication"
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "15px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </div>
            <div
              className="responsive-styles__component-fbPFZZ jwwxoJ"
            >
              <div>
                <h3
                  aria-level="3"
                  dir="auto"
                  role="heading"
                  style={
                    Object {
                      "fontFamily": "TimesModern-Bold",
                      "fontSize": "22px",
                      "fontWeight": "400",
                      "lineHeight": "22px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Top medal for forces dog who took a bite out of the Taliban
                </h3>
                <div
                  aria-label="datePublication"
                  data-testid="datePublication"
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "15px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`AuthorProfile test on web renders profile content item component with a specific image size 1`] = `
<a
  href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div>
    <div
      className="responsive-styles__component-fbPFZZ yHfos"
    >
      <div
        className="responsive-styles__component-fbPFZZ woNlo"
      >
        <div>
          <div
            className="authorProfileContent"
          >
            <div
              className="responsive-styles__component-fbPFZZ dQznFS"
            >
              <div>
                <h3
                  aria-level="3"
                  dir="auto"
                  role="heading"
                  style={
                    Object {
                      "fontFamily": "TimesModern-Bold",
                      "fontSize": "22px",
                      "fontWeight": "400",
                      "lineHeight": "22px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Top medal for forces dog who took a bite out of the Taliban
                </h3>
                <div
                  aria-label="datePublication"
                  data-testid="datePublication"
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "15px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </div>
            <div
              className="responsive-styles__component-fbPFZZ jwwxoJ"
            >
              <div>
                <h3
                  aria-level="3"
                  dir="auto"
                  role="heading"
                  style={
                    Object {
                      "fontFamily": "TimesModern-Bold",
                      "fontSize": "22px",
                      "fontWeight": "400",
                      "lineHeight": "22px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Top medal for forces dog who took a bite out of the Taliban
                </h3>
                <div
                  aria-label="datePublication"
                  data-testid="datePublication"
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "15px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`AuthorProfile test on web renders profile content item component with no image 1`] = `
<a
  href="https://www.thetimes.co.uk/article/top-medal-for-forces-dog-who-took-a-bite-out-of-the-taliban-vgklxs37f"
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <div>
    <div
      className="responsive-styles__component-fbPFZZ yHfos"
    >
      <div
        className="responsive-styles__component-fbPFZZ woNlo"
      >
        <div>
          <div
            className="authorProfileContent"
          >
            <div
              className="responsive-styles__component-fbPFZZ dQznFS"
            >
              <div>
                <h3
                  aria-level="3"
                  dir="auto"
                  role="heading"
                  style={
                    Object {
                      "fontFamily": "TimesModern-Bold",
                      "fontSize": "22px",
                      "fontWeight": "400",
                      "lineHeight": "22px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Top medal for forces dog who took a bite out of the Taliban
                </h3>
                <div
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "20px",
                    }
                  }
                >
                  <span
                    dir="auto"
                  >
                    
                    The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                    ...
                  </span>
                </div>
                <div
                  aria-label="datePublication"
                  data-testid="datePublication"
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "15px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </div>
            <div
              className="responsive-styles__component-fbPFZZ jwwxoJ"
            >
              <div>
                <h3
                  aria-level="3"
                  dir="auto"
                  role="heading"
                  style={
                    Object {
                      "fontFamily": "TimesModern-Bold",
                      "fontSize": "22px",
                      "fontWeight": "400",
                      "lineHeight": "22px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Top medal for forces dog who took a bite out of the Taliban
                </h3>
                <div
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "20px",
                    }
                  }
                >
                  <span
                    dir="auto"
                  >
                    
                    The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and
                    ...
                  </span>
                </div>
                <div
                  aria-label="datePublication"
                  data-testid="datePublication"
                  dir="auto"
                  style={
                    Object {
                      "lineHeight": "15px",
                      "marginBottom": "5px",
                    }
                  }
                >
                  Friday November 17 2017, 12:01am, The Times
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`AuthorProfile test on web renders profile content loading 1`] = `
<div>
  <div>
    <div />
    <div>
      <div>
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ cvTinV"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="empty.0"
        data-testid="empty.0"
        id="empty.0"
      >
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders profile error 1`] = `
<AuthorProfileError
  refetch={[Function]}
>
  <responsive-styles__component>
    <View
      className="responsive-styles__component-fbPFZZ fkGisv"
    >
      <div
        className="responsive-styles__component-fbPFZZ fkGisv"
      >
        <responsive-styles__component>
          <View
            className="responsive-styles__component-fbPFZZ fnGrfx"
          >
            <div
              className="responsive-styles__component-fbPFZZ fnGrfx"
            >
              <responsive-styles__component>
                <Text
                  className="responsive-styles__component-fbPFZZ gCSgGa"
                >
                  <div
                    className="responsive-styles__component-fbPFZZ gCSgGa"
                    dir="auto"
                  >
                    Something's gone wrong
                  </div>
                </Text>
              </responsive-styles__component>
              <responsive-styles__component>
                <Text
                  className="responsive-styles__component-fbPFZZ bDfrwz"
                >
                  <div
                    className="responsive-styles__component-fbPFZZ bDfrwz"
                    dir="auto"
                  >
                    We can't load the page you have requested. Please check your network connection and retry to continue
                  </div>
                </Text>
              </responsive-styles__component>
              <responsive-styles__component>
                <View
                  className="responsive-styles__component-fbPFZZ hvuxLw"
                >
                  <div
                    className="responsive-styles__component-fbPFZZ hvuxLw"
                  >
                    <Button
                      accessibilityLabel="Refresh the page"
                      color="#006699"
                      onPress={[Function]}
                      title="Retry"
                    >
                      <TouchableOpacity
                        accessibilityLabel="Refresh the page"
                        accessibilityRole="button"
                        activeOpacity={0.2}
                        focusedOpacity={0.7}
                        onPress={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#006699",
                            "borderRadius": 2,
                          }
                        }
                      >
                        <View
                          accessibilityLabel="Refresh the page"
                          accessibilityRole="button"
                          accessible={true}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "backgroundColor": "#006699",
                              "borderRadius": 2,
                              "cursor": "pointer",
                              "touchAction": "manipulate",
                              "transitionDuration": "0.15s",
                              "transitionProperty": "opacity",
                              "userSelect": "none",
                            }
                          }
                        >
                          <div
                            aria-label="Refresh the page"
                            onKeyDown={[Function]}
                            onKeyPress={[Function]}
                            onKeyUp={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            role="button"
                            style={
                              Object {
                                "backgroundColor": "rgba(0,102,153,1)",
                              }
                            }
                            tabIndex="0"
                          >
                            <Text
                              style={
                                Object {
                                  "color": "#fff",
                                  "fontWeight": "500",
                                  "padding": 8,
                                  "textAlign": "center",
                                  "textTransform": "uppercase",
                                }
                              }
                            >
                              <div
                                dir="auto"
                              >
                                Retry
                              </div>
                            </Text>
                          </div>
                        </View>
                      </TouchableOpacity>
                    </Button>
                  </div>
                </View>
              </responsive-styles__component>
            </div>
          </View>
        </responsive-styles__component>
        <responsive-styles__component>
          <View
            className="responsive-styles__component-fbPFZZ dISvDf"
          >
            <div
              className="responsive-styles__component-fbPFZZ dISvDf"
            >
              <TimesImage
                aspectRatio={0.9090909090909091}
                uri="https://www.thetimes.co.uk/d/img/internal-error-c45d0e8347.png"
              >
                <View>
                  <div>
                    <div
                      style={
                        Object {
                          "display": "table",
                          "height": 0,
                          "overflow": "hidden",
                          "paddingBottom": "110%",
                        }
                      }
                    >
                      <img
                        alt=""
                        src="https://www.thetimes.co.uk/d/img/internal-error-c45d0e8347.png"
                        style={
                          Object {
                            "display": "block",
                            "position": "absolute",
                            "width": "100%",
                            "zIndex": 1,
                          }
                        }
                      />
                      <Placeholder
                        style={
                          Object {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 0,
                          }
                        }
                      >
                        <View
                          onLayout={[Function]}
                          style={
                            Object {
                              "bottom": 0,
                              "flex": 1,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <div>
                            <Gradient
                              degrees={264}
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                                    "flex": 1,
                                  }
                                }
                              >
                                <div
                                  style={
                                    Object {
                                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                                    }
                                  }
                                />
                              </View>
                            </Gradient>
                          </div>
                        </View>
                      </Placeholder>
                    </div>
                  </div>
                </View>
              </TimesImage>
            </div>
          </View>
        </responsive-styles__component>
      </div>
    </View>
  </responsive-styles__component>
</AuthorProfileError>
`;

exports[`AuthorProfile test on web renders profile loading 1`] = `
<div>
  <div>
    <div />
    <div>
      <div>
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(265deg, #F9F9F9 0%, #EDEDED 100%)",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ cvTinV"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="empty.0"
        data-testid="empty.0"
        id="empty.0"
      >
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.1"
        data-testid="empty.1"
        id="empty.1"
      >
        <div />
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.2"
        data-testid="empty.2"
        id="empty.2"
      >
        <div />
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileImage"
              >
                <div>
                  <div
                    style={
                      Object {
                        "display": "table",
                        "height": 0,
                        "overflow": "hidden",
                        "paddingBottom": "66.66666666666667%",
                      }
                    }
                  >
                    <img
                      alt=""
                      src=""
                      style={
                        Object {
                          "display": "block",
                          "position": "absolute",
                          "width": "100%",
                          "zIndex": 1,
                        }
                      }
                    />
                    <div>
                      <div
                        style={
                          Object {
                            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders profile separator 1`] = `<div />`;

exports[`AuthorProfile test on web renders the author head 1`] = `
<div
  className="responsive-styles__component-fbPFZZ woNlo"
>
  <div
    data-testid="author-head"
  >
    <header
      className="responsive-styles__component-fbPFZZ eNPgyU"
      role="banner"
    >
      <div
        className="responsive-styles__component-fbPFZZ fRtPsM"
      />
      <h1
        aria-label="author-name"
        aria-level="1"
        className="responsive-styles__component-fbPFZZ dkRirA"
        data-testid="author-name"
        dir="auto"
        role="heading"
      >
        Deborah Haynes
      </h1>
      <h2
        aria-level="2"
        dir="auto"
        role="heading"
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
          }
        }
      >
        
      </h2>
      <div>
        <svg
          height={15}
          width={15}
        >
          <path
            fill="#006699"
          />
        </svg>
        <a
          dir="auto"
          href="https://twitter.com/jdoe"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
        >
          @
          jdoe
        </a>
      </div>
      <div
        className="responsive-styles__component-fbPFZZ yjaCW"
      >
        <div
          data-testid="author-bio"
          dir="auto"
        />
      </div>
    </header>
  </div>
</div>
`;

exports[`AuthorProfile test on web renders with an intersection observer which uses the expected options 1`] = `
Object {
  "rootMargin": "50px",
  "threshold": 0.5,
}
`;

exports[`AuthorProfile test on web renders with no author 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ woNlo"
  >
    <div
      data-testid="author-head"
    >
      <header
        className="responsive-styles__component-fbPFZZ eNPgyU"
        role="banner"
      >
        <div
          className="responsive-styles__component-fbPFZZ fRtPsM"
        />
        <h1
          aria-label="author-name"
          aria-level="1"
          className="responsive-styles__component-fbPFZZ dkRirA"
          data-testid="author-name"
          dir="auto"
          role="heading"
        >
          
        </h1>
        <h2
          aria-level="2"
          dir="auto"
          role="heading"
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
            }
          }
        >
          
        </h2>
        <div
          className="responsive-styles__component-fbPFZZ yjaCW"
        >
          <div
            data-testid="author-bio"
            dir="auto"
          />
        </div>
      </header>
    </div>
  </div>
  <div
    className="responsive-styles__component-fbPFZZ cvTinV"
  >
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ ldBdZT"
        >
          <div
            className="responsive-styles__component-fbPFZZ exZFAC"
          >
            <div
              data-testid="results-message"
              dir="auto"
            >
              Showing 0 - 0 of 0 results
            </div>
          </div>
          <div
            className="responsive-styles__component-fbPFZZ cePhpb"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        accessibility-label="empty.0"
        data-testid="empty.0"
        id="empty.0"
      >
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.1"
        data-testid="empty.1"
        id="empty.1"
      >
        <div />
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        accessibility-label="empty.2"
        data-testid="empty.2"
        id="empty.2"
      >
        <div />
        <div>
          <div
            className="responsive-styles__component-fbPFZZ yHfos"
          >
            <div>
              <div
                className="authorProfileContent"
              >
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
                <div
                  style={
                    Object {
                      "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="responsive-styles__component-fbPFZZ kdgRsQ"
        >
          <div
            className="responsive-styles__component-fbPFZZ ciodUt"
          >
            <div />
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
